// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox default render 1`] = `
<DocumentFragment>
  <div>
    <label
      class="sc-blHHSb zYgxi"
    >
      <input
        class="sc-gtLWhw eXNWMH"
        type="checkbox"
      />
      <span
        class="sc-egkSDF NQFOD"
      />
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox small 1`] = `
<DocumentFragment>
  <div>
    <label
      class="sc-blHHSb zYgxi"
    >
      <input
        class="sc-gtLWhw eXNWMH"
        type="checkbox"
      />
      <span
        class="sc-egkSDF dMgjqf"
      />
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox with disabled 1`] = `
<DocumentFragment>
  <div>
    <label
      class="sc-blHHSb giWDzg"
      disabled=""
    >
      <input
        class="sc-gtLWhw eXNWMH"
        disabled=""
        type="checkbox"
      />
      <span
        class="sc-egkSDF cwYloQ"
        disabled=""
      />
    </label>
  </div>
</DocumentFragment>
`;

exports[`Checkbox with display asBlock 1`] = `
<DocumentFragment>
  <div>
    <label
      class="sc-blHHSb zYgxi"
    >
      <input
        class="sc-gtLWhw eXNWMH"
        type="checkbox"
      />
      <span
        class="sc-egkSDF NQFOD"
      />
    </label>
    <div
      class="sc-fAUdSK CeDQe"
    />
  </div>
</DocumentFragment>
`;

exports[`Checkbox with error 1`] = `
<DocumentFragment>
  <div>
    <label
      class="sc-blHHSb zYgxi"
      error="no text"
    >
      Input
      <input
        class="sc-gtLWhw eXNWMH"
        type="checkbox"
      />
      <span
        class="sc-egkSDF lLtdh"
        error="no text"
      />
    </label>
    <div
      class="sc-fAUdSK iJytMv"
      error="no text"
    >
      no text
    </div>
  </div>
</DocumentFragment>
`;
